<resources>
    <string name="app_name">Konektra</string>
    <string name="isi_snk">Terakhir diubah pada [28 September 2023]\n\nTerimakasih telah berkunjung di Konektra.\n\nSyarat dan Ketentuan berikut:
    \n<b>1. Penerimaan Syarat dan Ketentuan</b>
    \n   1.1 Dengan mengunduh, menginstal, atau menggunakan Aplikasi Konektra ("Aplikasi"), Anda setuju untuk terikat oleh syarat dan ketentuan penggunaan di bawah ini.
    \n   1.2 Jika Anda tidak setuju dengan syarat dan ketentuan ini, harap untuk tidak mengakses atau menggunakan Aplikasi Konektra.
    \n\n<b>2. Penggunaan Aplikasi Konektra</b>
    \n   2.1 Aplikasi Konektra merupakan aplikasi bahasa isyarat yang menyediakan layanan Text-to-Speech (TTS), Text-to-Sign (TTS), Sign-to-Text (STT), dan fitur kamera dengan izin pengguna.
    \n   2.2 Anda dapat menggunakan Aplikasi Konektra tanpa perlu mendaftar sebagai pengguna. Namun, penggunaan beberapa fitur, seperti menyimpan riwayat atau preferensi pengguna, mungkin memerlukan penyimpanan lokal pada perangkat Anda.
    \n\n<b>3. Fitur Aplikasi</b>
    \n    <b>3.1 Text-to-Speech (TTS):</b>
    \n       3.1.1 Aplikasi menyediakan layanan TTS untuk mengubah teks menjadi ucapan suara.
    \n       3.1.2 Pengguna dapat menggunakan fitur TTS tanpa memerlukan pendaftaran.
    \n    <b>3.2 Text-to-Sign (TTS):</b>
    \n       3.2.1 Aplikasi menyediakan layanan TTS untuk mengubah teks menjadi bahasa isyarat melalui representasi visual.
    \n       3.2.2 Pengguna dapat mengakses fitur TTS tanpa perlu membuat akun pengguna.
    \n    <b>3.3 Sign-to-Text (STT):</b>
    \n       3.3.1 Aplikasi memiliki fitur STT yang memungkinkan pengguna mengonversi bahasa isyarat menjadi teks.
    \n       3.3.2 Penggunaan STT tidak memerlukan proses pendaftaran.
    \n    <b>3.4 Kamera dan Izin:</b>
    \n       3.4.1 Aplikasi membutuhkan izin akses kamera untuk fitur tertentu, seperti interpretasi bahasa isyarat melalui gambar.
    \n       3.4.2 Izin kamera bersifat opsional, dan Anda dapat mengubahnya melalui pengaturan perangkat.
    \n\n<b>4. Kebijakan Privasi</b>
    \n   4.1 Informasi lebih lanjut mengenai kebijakan privasi Aplikasi Konektra dapat diakses melalui menu pengaturan aplikasi.
    \n   4.2 Aplikasi Konektra tidak mengumpulkan informasi pribadi pengguna tanpa izin.
    \n\n<b>5. Pembaharuan Syarat dan Ketentuan</b>
    \n   5.1 Syarat dan ketentuan ini dapat diperbarui sesuai kebijakan kami. Anda akan diberitahu tentang perubahan melalui pembaruan Aplikasi.
    \n   5.2 Dengan melanjutkan penggunaan Aplikasi setelah perubahan ini, Anda dianggap telah menerima perubahan tersebut.
    \n\n<b>6. Kontak Dukungan</b>
    \n   6.1 Jika Anda memiliki pertanyaan atau masalah, hubungi tim dukungan kami melalui email di konektra.app@gmail.com.
    \n   6.2 Kami akan berusaha memberikan tanggapan dan dukungan secepat mungkin.
    \n\nTerima kasih telah menggunakan Aplikasi Konektra. Dengan menggunakan Aplikasi, Anda setuju untuk mematuhi syarat dan ketentuan di atas.
    </string>
    <string name="boldSnK"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="cbSnK">Saya telah membaca dan menyetujui syarat dan ketentuan aplikasi</string>
    <string name="title_menu_1">Terjemahkan</string>
    <string name="desc_menu_1">Komunikasi tanpa\nbatas dan halangan</string>
    <string name="title_menu_2">Text to Speech</string>
    <string name="desc_menu_2">Ekspresikan isi hatimu\nmelalui suara</string>
    <string name="title_menu_3">Text to Sign</string>
    <string name="desc_menu_3">Sampaikan\nperasaanmu menjadi\nisyarat</string>
    <string name="title_menu_4">Sign to Text</string>
    <string name="desc_menu_4">Sampaikan isyaratmu\nkepada mereka</string>
    <string name="finish">Selesai</string>
    <string name="title_welcome_page">Hi, Selamat Datang di Konektra!</string>
    <string name="message_welcome_page">Yuk gunakan penerjemah bahasa isyarat dengan Konektra!</string>
    <string name="title_tv">Informasi Terkini</string>
    <string name="description">Description</string>
    <string name="summary">Summary</string>
    <string name="detail_description">Detail Description</string>
    <string name="desc_tv">Jangan lewatkan informasi terkini konektra</string>
    <string name="tts">Text To Speech</string>
    <string name="long_description">Silahkan Mengisi</string>
    <string-array name="data_name">
        <item>Mengapa Kita Membutuhkan \nTeks To Speech?</item>
        <item>Mengapa Kita Membutuhkan \nTeks To Sign?</item>
        <item>Mengapa Kita Membutuhkan \nSign To Teks?</item>
        <item>Credit</item>
    </string-array>
</resources>